Finding year is a leap year or not

--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+ZGKHekcRrJgJc/C/xah6",
+      "authorship_tag": "ABX9TyPfp898XJMk1CoxhCsevC4V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,47 +253,75 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "80stFVmI5lqr",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "b06c1d74-b50c-49eb-87f2-e7659298987e"
-      },
       "source": [
         "def is_leap(year):\n",
-        "  1900<=year and year<=10**5\n",
-        "  if year%4==0 or (year%100==0 and year%400==0):\n",
-        "      result = 'True'\n",
-        "  else:\n",
-        "      result = 'False'\n",
-        "  return result        \n",
         "    \n",
+        "    if year%400==0:\n",
+        "        result = \"True\"\n",
+        "    else:\n",
+        "        if year%4==0 and year%100!=0:\n",
+        "            result = \"True\" \n",
+        "        else:\n",
+        "            result = \"False\"\n",
+        "    return result        \n",
+        "    \n",
+        "\n",
         "year = int(input())\n",
-        "is_leap(year)"
+        "print(is_leap(year))"
       ],
-      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TAcBYaEWn_aP",
+        "outputId": "86286a86-0312-4172-c3cc-573acaa8486b"
+      },
+      "execution_count": 2,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "1990\n"
+            "2100\n",
+            "False\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finding Leap year without using function"
+      ],
+      "metadata": {
+        "id": "pHWXP7trprqV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = int(input(\"Enter an year \"))\n",
+        "\n",
+        "result = \"Leap Year\" if x%400==0 else \"Leap Year\" if x%4==0 and x%100!=0 else \"Non Leap year\"\n",
+        "\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "ghWGxL-Go43i",
+        "outputId": "01ad04e3-a505-4add-9991-8c1777f204cc"
+      },
+      "execution_count": 5,
+      "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'False'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an year 2100\n",
+            "Non Leap year\n"
+          ]
         }
       ]
     },
@@ -1259,7 +1287,7 @@
         "result = solve(m)\n",
         "print(result)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1279,7 +1307,7 @@
       "source": [
         ""
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     }
   ]
