The minion problem

--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPfp898XJMk1CoxhCsevC4V",
+      "authorship_tag": "ABX9TyPYuV8aXIw+pWqNiPQjsiCq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,7 +276,7 @@
         "id": "TAcBYaEWn_aP",
         "outputId": "86286a86-0312-4172-c3cc-573acaa8486b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,7 @@
         "id": "ghWGxL-Go43i",
         "outputId": "01ad04e3-a505-4add-9991-8c1777f204cc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,7 +379,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8a8c306d-f6ec-4a15-d883-b938ffbcabef"
+        "outputId": "a4977088-2ac0-4adf-a563-3792566cf8cb"
       },
       "source": [
         "if __name__ == '__main__':\n",
@@ -404,11 +404,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2\n",
-            "2\n",
-            "2\n",
-            "2\n",
-            "[[0, 0, 0], [0, 0, 1], [0, 1, 0], [0, 1, 2], [0, 2, 1], [0, 2, 2], [1, 0, 0], [1, 0, 2], [1, 1, 1], [1, 1, 2], [1, 2, 0], [1, 2, 1], [1, 2, 2], [2, 0, 1], [2, 0, 2], [2, 1, 0], [2, 1, 1], [2, 1, 2], [2, 2, 0], [2, 2, 1], [2, 2, 2]]\n"
+            "4\n",
+            "5\n",
+            "1\n",
+            "10\n",
+            "[[0, 0, 0], [0, 0, 1], [0, 1, 0], [0, 1, 1], [0, 2, 0], [0, 2, 1], [0, 3, 0], [0, 3, 1], [0, 4, 0], [0, 4, 1], [0, 5, 0], [0, 5, 1], [1, 0, 0], [1, 0, 1], [1, 1, 0], [1, 1, 1], [1, 2, 0], [1, 2, 1], [1, 3, 0], [1, 3, 1], [1, 4, 0], [1, 4, 1], [1, 5, 0], [1, 5, 1], [2, 0, 0], [2, 0, 1], [2, 1, 0], [2, 1, 1], [2, 2, 0], [2, 2, 1], [2, 3, 0], [2, 3, 1], [2, 4, 0], [2, 4, 1], [2, 5, 0], [2, 5, 1], [3, 0, 0], [3, 0, 1], [3, 1, 0], [3, 1, 1], [3, 2, 0], [3, 2, 1], [3, 3, 0], [3, 3, 1], [3, 4, 0], [3, 4, 1], [3, 5, 0], [3, 5, 1], [4, 0, 0], [4, 0, 1], [4, 1, 0], [4, 1, 1], [4, 2, 0], [4, 2, 1], [4, 3, 0], [4, 3, 1], [4, 4, 0], [4, 4, 1], [4, 5, 0]]\n"
           ]
         }
       ]
@@ -1300,13 +1300,106 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Problem 26: The Minion Game\n",
+        "for full problem click [here](https://www.hackerrank.com/challenges/the-minion-game/problem)"
+      ],
+      "metadata": {
+        "id": "Dgkt9KofDMK4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def minion_game(string):  \n",
+        "    vowels = \"AEIOU\"\n",
+        "    stuart = 0\n",
+        "    kevin = 0\n",
+        "    for i, char in enumerate(string):\n",
+        "        if char in vowels:\n",
+        "            kevin += len(string) - i\n",
+        "        else:\n",
+        "            stuart += len(string) - i\n",
+        "    if kevin == stuart:\n",
+        "        print(\"Draw\")\n",
+        "    elif kevin > stuart:\n",
+        "        print(f\"Kevin {kevin}\")\n",
+        "    else:\n",
+        "        print(f\"Stuart {stuart}\")\n",
+        "    \n"
+      ],
+      "metadata": {
+        "id": "VQR3k-K8DPEo"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "WXT9OtiGLaar"
+        "id": "WXT9OtiGLaar",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "035d99f4-b7ff-499f-c157-a171b3760329"
       },
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    s = input()\n",
+        "    minion_game(s)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BANANA\n",
+            "Stuart 12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Problem: 27"
+      ],
+      "metadata": {
+        "id": "Gx_MImigDuHM"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
       ],
+      "metadata": {
+        "id": "CVPQ0W_zDqcP"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "et-JJ83SD0P-"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Swk5Vk25D0Us"
+      },
       "execution_count": null,
       "outputs": []
     }
